--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
       "inline"
     ],
     "website": "https://github.com/Mahesh0253/Media-Search-bot",
-    "repository": "https://github.com/Axayzala/moviebackupbot",
+    "repository": "https://github.com/Axayzala/moviebot97",
     "env": {
         "BOT_TOKEN": {
             "description": "Your bot token.",
